test_suite/alan-2022-examples/failing/000730_mutation.alan
source D begin boolean array boolean O3; relax end
